@@ -1,3 +1,11 @@
+2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Improve documentation layout.
+
+	* doc/DoxygenLayout.xml: Change menu.
+
+	* doc/Makefile.am: Do not use relative paths.
+
 2012-02-28  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	Disable the use of installdox and fix doc location.
